--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,19 +19,19 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Entities/MilitaryBase/military_base.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Entities/", "res://Entities/MilitaryBase/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main_game.tscn")
+open_scenes=PackedStringArray("res://Scenes/main_game.tscn", "res://Entities/MilitaryBase/military_base.tscn")
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-current_scene="res://Scenes/main_game.tscn"
+current_scene="res://Entities/MilitaryBase/military_base.tscn"
 
 [ScriptEditor]
 
