--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,26 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Entities/MilitaryBase/military_base.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Entities/", "res://Entities/MilitaryBase/")
+dock_filesystem_selected_paths=PackedStringArray("res://Sprites/tank.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/", "res://Entities/", "res://Entities/MilitaryBase/", "res://Entities/HUD/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main_game.tscn", "res://Entities/MilitaryBase/military_base.tscn")
+open_scenes=PackedStringArray("res://Scenes/main_game.tscn", "res://Entities/MilitaryBase/military_base.tscn", "res://Entities/HUD/main_ui.tscn", "res://Entities/Tank/tank.tscn")
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-current_scene="res://Entities/MilitaryBase/military_base.tscn"
+current_scene="res://Entities/HUD/main_ui.tscn"
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
-open_help=[]
+open_scripts=["res://Entities/HUD/main_ui.gd", "res://Entities/HUD/PosLabel.gd"]
+selected_script="res://Entities/HUD/PosLabel.gd"
+open_help=["Label"]
 script_split_offset=70
 list_split_offset=0
 
